On tablet, issues boxes shouldn't take up full screen
Setting width to auto on the ambox itself will ensure section
issues are not pushed below infoboxes, while ensuring that due
to the tbody width 100% rule that they will take up full screen
where possible.

Bug: T202512

--- a/resources/skins.minerva.content.styles/templates/ambox.less
+++ b/resources/skins.minerva.content.styles/templates/ambox.less
@@ -27,7 +27,7 @@ table.ambox {
 .client-js .ambox {
 	cursor: pointer;
 	font-size: 0.8em;
-	width: 100%;
+	width: auto;
 	background: @amboxBackground;
 	color: @colorGray5;
 
